bugfix: table css for conditions page sticking out of the mobile screen

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -921,6 +921,11 @@ table tbody tr:nth-child(2n + 1) {
 table td {
     padding: 0.75em 0.75em;
 }
+@media screen and (max-width: 480px) {
+    table td {
+        padding: 0.75em 0.3em;
+    }
+}
 
 table th {
     color: #ffffff;
